Refactor LeaveRequestService and related services for improved clarity and efficiency
- Simplified leave request creation and validation logic in LeaveRequestService.
- Updated method names and parameters for consistency with new domain models.
- Enhanced error handling for overlapping leave requests.
- Streamlined DTO mapping and removed unnecessary fields.
- Refactored ReservationService to use updated role codes and improved reservation creation logic.
- Simplified ScheduleService by delegating schedule retrieval to EmployeeWorkdayService.
- Improved TimeTrackingService to utilize new WorkShift and EmployeeTimeEntry models.
- Added UserRoleService for managing user roles with clear role assignment logic.